[metadata]
name = conveyorcaa
version = 2016.1
summary = OpenStack clone/migrate service agent
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conveyorcaa

[files]
data_files =
    /etc/conveyorcaa = etc/conveyorcaa/*

[entry_points]
console_scripts =
    conveyorcaa = conveyorcaa.server:main
